task/k8s/template/todo-api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-api-gateway
  labels:
    todo-app-deployment: todo-api-gateway
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-api-gateway
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-api-gateway
    spec:
      restartPolicy: Always
      containers:
      - name: todo-api-gateway
        image: ${DOCKER_HUB_ID}/${API_GATEWAY_IMAGE}
        ports:
        - containerPort: ${API_GATEWAY_TARGET_PORT}
        resources:
          limits:
            memory: ${API_GATEWAY_LIMITS_MEMORY}
