task/k8s/template/todo-cache-ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-cache-ingestion
  labels:
    todo-app-deployment: todo-cache-ingestion
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-cache-ingestion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-cache-ingestion
    spec:
      restartPolicy: Always
      containers:
      - image: ${DOCKER_HUB_ID}/${CACHE_INGESTION_IMAGE}
        name: todo-cache-ingestion
        resources:
          limits:
            memory: ${CACHE_INGESTION_LIMITS_MEMORY}
