task/k8s/template/todo-cache-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-cache-service
  labels:
    todo-app-deployment: todo-cache-service
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-cache-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-cache-service
    spec:
      restartPolicy: Always
      containers:
      - name: todo-cache-service
        image: ${DOCKER_HUB_ID}/${CACHE_SERVICE_IMAGE}
        ports:
        - containerPort: ${CACHE_SERVICE_TARGET_PORT}
        resources:
          limits:
            memory: ${CACHE_SERVICE_LIMITS_MEMORY}
