task/k8s/template/todo-elastic-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-elastic
  labels:
    todo-app-deployment: todo-elastic
spec:
  replicas: 1
  selector:
    matchLabels:
      todo-app-pod: todo-elastic
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        todo-app-pod: todo-elastic
    spec:
      restartPolicy: Always
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - name: todo-elastic
          image: ${ELASTICSEARCH_IMAGE}
          ports:
            - name: ${ELASTICSEARCH_PORT_HTTP_NAME}
              containerPort: ${ELASTICSEARCH_TARGET_PORT_HTTP}
            - name: ${ELASTICSEARCH_PORT_TRANSPORT_NAME}
              containerPort: ${ELASTICSEARCH_TARGET_PORT_TRANSPORT}
          resources:
            limits:
              memory: ${ELASTICSEARCH_LIMIST_MEMORY}
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elastic-data
          readinessProbe:
            httpGet:
              path: /
              port: ${ELASTICSEARCH_TARGET_PORT_HTTP}
              scheme: HTTP
            timeoutSeconds: 6
            successThreshold: 3
          livenessProbe:
            httpGet:
              path: /_cluster/health
              port: ${ELASTICSEARCH_TARGET_PORT_HTTP}
              scheme: HTTP
            initialDelaySeconds: 360
            timeoutSeconds: 6
          securityContext:
            allowPrivilegeEscalation: false
      volumes:
        - name: elastic-data
          persistentVolumeClaim:
            claimName: elastic-data-pvc
