task/k8s/template/todo-postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-postgres
  labels:
    todo-app-deployment: todo-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      todo-app-pod: todo-postgres
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        todo-app-pod: todo-postgres
    spec:
      restartPolicy: Always
      containers:
        - name: todo-postgres
          image: ${DOCKER_HUB_ID}/${POSTGRES_IMAGE}
          ports:
            - containerPort: ${POSTGRES_PORT}
          resources:
            limits:
              memory: ${POSTGRES_LIMITS_MEMORY}
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - ${POSTGRES_USER}
            initialDelaySeconds: 5
            timeoutSeconds: 1
            successThreshold: 3
          livenessProbe:
            exec:
              command:
                - pg_isready
                - -h
                - localhost
                - -U
                - ${POSTGRES_USER}
            failureThreshold: 3
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-data-pvc
