task/k8s/template/todo-search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-search-service
  labels:
    todo-app-deployment: todo-search-service
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-search-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-search-service
    spec:
      restartPolicy: Always
      containers:
      - name: todo-search-service
        image: ${DOCKER_HUB_ID}/${SEARCH_SERVICE_IMAGE}
        ports:
        - containerPort: ${SEARCH_SERVICE_TARGET_PORT}
        resources:
          limits:
            memory: ${SEARCH_SERVICE_LIMITS_MEMORY}
