task/k8s/template/todo-storage-ingestion-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-storage-ingestion
  labels:
    todo-app-deployment: todo-storage-ingestion
spec:
  replicas: 1
  selector:
      matchLabels:
        todo-app-pod: todo-storage-ingestion
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-storage-ingestion
    spec:
      restartPolicy: Always
      containers:
      - name: todo-storage-ingestion
        image: ${DOCKER_HUB_ID}/${STORAGE_INGESTION_IMAGE}
        resources:
          limits:
            memory: "${STORAGE_INGESTION_LIMITS_MEMORY}"
