task/k8s/template/todo-storage-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: ${NAMESPACE}
  name: todo-storage-service
  labels:
    todo-app-deployment: todo-storage-service
spec:
  replicas: 2
  selector:
      matchLabels:
        todo-app-pod: todo-storage-service
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        todo-app-pod: todo-storage-service
    spec:
      restartPolicy: Always
      containers:
      - image: ${DOCKER_HUB_ID}/${STORAGE_SERVICE_IMAGE}
        name: todo-storage-service
        ports:
        - containerPort: ${STORAGE_SERVICE_TARGET_PORT}
        resources:
          limits:
            memory: "${STORAGE_SERVICE_LIMITS_MEMORY}"
