task/k8s/template/todo-proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: ${NAMESPACE}
  name: todo-proxy
  labels:
    todo-app-service: todo-proxy
spec:
  type: LoadBalancer
  selector:
    todo-app-pod: todo-proxy
  ports:
  - name: ${PROXY_PORT_NAME}
    port: ${PROXY_PORT}
    targetPort: ${PROXY_TARGET_PORT}
