task/k8s/template/todo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: todo
  name: todo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: todo-proxy
              servicePort: ${PROXY_TARGET_PORT}
